parser/src/test/resources/corpus/valid/45_weighted_average.ff
rule "Weighted Avg" {
  let warr = weighted average return weighted by capital
}
