parser/src/test/resources/corpus/invalid/48_sum_no_of.ff
rule "Sum No Of" {
  let x = sum fee
}
